--- a/styles.css
+++ b/styles.css
@@ -172,6 +172,7 @@ li {
     font-weight: 100;
     padding-top: 0;
     margin-top: -24px;
+    line-height: 1.1;
 }
 @media (max-width: 768px) {
     .price {
