--- a/styles.css
+++ b/styles.css
@@ -190,6 +190,10 @@ li {
     padding: 16px 0;
     border-top: 1px solid #e5e5e5;
 }
+.price__row:hover {
+    background: #d40d0d;
+    color: white;
+}
 .price__row:first-child {
     border: 0;
 }
