--- a/styles.css
+++ b/styles.css
@@ -191,7 +191,7 @@ li {
     border-top: 1px solid #e5e5e5;
 }
 .price__row:hover {
-    background: #d40d0d;
+    background: #cc5656;
     color: white;
 }
 .price__row:first-child {
