--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,14 @@ p {
 h2 {
     font-weight: 400;
 }
+h2 span {
+    white-space: nowrap;
+}
+@media (max-width: 768px) {
+    h1, h2 {
+        text-align: center;
+    }
+}
 li {
     line-height: 1.7;
 }
@@ -88,6 +96,8 @@ li {
 .header img {
     max-height: 36px;
 }
+
+/* menu */
 .menu {
     font-size: 18px;
     font-weight: 500;
@@ -98,12 +108,72 @@ li {
 }
 .menu-item {
     margin-left: 50px;
+    position: relative;
+    padding: 12px;
+}
+.menu-item:hover {
+    color: #d40d0d;
+}
+.menu-item:hover .sub-menu {
+    opacity: 1;
+    pointer-events: all;
 }
 @media (max-width: 768px) {
     .menu {
+        position: absolute;
+        width: 100vw;
+        height: 100vh;
+        left: 0;
+        top: 0;
+        display: flex;
+        flex-direction: column;
+        background: #2d363e;
+        margin-top: 120px;
+        z-index: 2;
+    }
+    .menu:not(.open) {
         display: none;
     }
+    .menu-item {
+        margin-left: 0;
+        position: relative;
+        padding: 12px;
+        text-align: center;
+    }
 }
+
+.sub-menu {
+    opacity: 0;
+    pointer-events: none;
+    background-color: #22282e;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    z-index: 1;
+    padding: 12px 24px;
+    margin-top: 0;
+    margin-left: -12px;
+    white-space: nowrap;
+    line-height: 1.5;
+}
+@media (max-width: 768px) {
+    .sub-menu {
+        position: relative;
+        opacity: 1;
+        top: 0;
+        margin-top: 12px;
+        margin-right: -12px;
+        line-height: 2;
+    }
+}
+.sub-menu__item {
+    color: white;
+    cursor: pointer;
+}
+.sub-menu__item:hover {
+    color: #d40d0d;
+}
+
 .hamburger {
     display: none;
 }
