--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,9 @@ body {
     font-family: sans-serif;
     color: #333;
     overflow-x: hidden;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 * {
     box-sizing: border-box;
@@ -110,6 +113,8 @@ li {
     margin-left: 50px;
     position: relative;
     padding: 12px;
+    text-decoration: none;
+    color: inherit;
 }
 .menu-item:hover {
     color: #d40d0d;
@@ -169,6 +174,7 @@ li {
 .sub-menu__item {
     color: white;
     cursor: pointer;
+    text-decoration: none;
 }
 .sub-menu__item:hover {
     color: #d40d0d;
