smaller h1 on mobile

--- a/styles.css
+++ b/styles.css
@@ -229,6 +229,11 @@ li {
     font-size: 54px;
     font-weight: 500;
 }
+@media (max-width: 768px) {
+    .banner h1 {
+        font-size: 28px;
+    }
+}
 .banner:after {
     content: "";
     display: block;
