--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,11 @@ h2 {
 h2 span {
     white-space: nowrap;
 }
+@media (max-width: 768px) {
+    h1, h2 {
+        /*text-align: center;*/
+    }
+}
 li {
     line-height: 1.7;
 }
@@ -180,16 +185,56 @@ li {
 }
 @media (max-width: 768px) {
     .hamburger {
-        width: 32px;
-        height: 16px;
-        margin-left: auto;
         display: flex;
-        margin-top: 10px;
-        box-shadow: 0 2px 0 white, 0 -2px 0 white;
-        padding-right: 2px;
-        background-clip: content-box;
-        background-image: linear-gradient(to bottom, transparent 0, transparent 7px, white 7px, white 9px, transparent 9px, transparent 16px);
+        margin-left: auto;
+        margin-top: 6px;
     }
+}
+.hamburger {
+    width: 36px;
+    height: 36px;
+    position: relative;
+    transform: rotate(0deg);
+    transition: .5s ease-in-out;
+    cursor: pointer;
+}
+.hamburger span {
+    display: block;
+    position: absolute;
+    height: 3px;
+    width: 100%;
+    background: white;
+    border-radius: 6px;
+    opacity: 1;
+    left: 0;
+    transform: rotate(0deg);
+    transition: .25s ease-in-out;
+}
+.hamburger span:nth-child(1) {
+    top: 0px;
+}
+.hamburger span:nth-child(2),
+.hamburger span:nth-child(3) {
+    top: 12px;
+}
+.hamburger span:nth-child(4) {
+    top: 24px;
+}
+.hamburger.open span:nth-child(1) {
+    top: 12px;
+    width: 0%;
+    left: 50%;
+}
+.hamburger.open span:nth-child(2) {
+    transform: rotate(45deg);
+}
+.hamburger.open span:nth-child(3) {
+    transform: rotate(-45deg);
+}
+.hamburger.open span:nth-child(4) {
+    top: 12px;
+    width: 0%;
+    left: 50%;
 }
 
 /* banner */
