no border for link on click

--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,11 @@ p {
     margin-top: 20px;
     font-weight: 300;
 }
+a:active, a:focus {
+    outline: none;
+    border: none;
+    box-shadow: none;
+}
 h2 {
     font-weight: 400;
 }
