--- a/styles.css
+++ b/styles.css
@@ -89,6 +89,10 @@ li {
 .contacts svg {
     fill: white;
 }
+.contacts a {
+    color: inherit;
+    text-decoration: none;
+}
 @media (max-width: 768px) {
     .contacts__container {
         justify-content: center;
