--- a/styles.css
+++ b/styles.css
@@ -322,6 +322,9 @@ img {
     margin-left: -50vw;
     opacity: 0.7;
 }
+.banner ~ div a:hover {
+    text-decoration: underline;
+}
 
 /* price */
 .price {
